user and icon buttons update

--- a/src/components/Footer/styles/footer.scss
+++ b/src/components/Footer/styles/footer.scss
@@ -20,7 +20,7 @@
   grid-gap: 0px;
   z-index: 1;
   width: 100% !important;
-  border-top: 2px solid var(--secondary);
+  border-top: 2px solid var(--main);
   .innerFooter {
     display: flex;
     width: 95%;
