--- a/src/components/Footer/styles/footer.css
+++ b/src/components/Footer/styles/footer.css
@@ -26,7 +26,7 @@
   grid-gap: 0px;
   z-index: 1;
   width: 100% !important;
-  border-top: 2px solid var(--secondary);
+  border-top: 2px solid var(--main);
 }
 
 .footer .innerFooter {
