--- a/src/components/Auth/styles/auth.css
+++ b/src/components/Auth/styles/auth.css
@@ -27,4 +27,46 @@
 .auth .innerAuth h2 {
   font-weight: 500;
 }
+
+.auth .innerAuth h3 {
+  font-weight: 500;
+}
+
+.auth .innerAuth form {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  width: 65% !important;
+  margin: 0 auto;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+}
+
+.auth .innerAuth form input {
+  width: 75% !important;
+  outline: 0;
+  padding: 0.55em 1em;
+  border: none;
+  border-radius: 0;
+  border-top-left-radius: 7px;
+  border-bottom-left-radius: 7px;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.auth .innerAuth form button {
+  width: 25% !important;
+  padding: 0.55em 1em;
+  background: var(--main);
+  border-radius: 0;
+  border-top-right-radius: 7px;
+  border-bottom-right-radius: 7px;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.auth .innerAuth form button:hover {
+  background: var(--secondary);
+}
 /*# sourceMappingURL=auth.css.map */
