--- a/src/components/Auth/styles/auth.scss
+++ b/src/components/Auth/styles/auth.scss
@@ -22,5 +22,36 @@
     h2 {
       font-weight: 500;
     }
+    h3 {
+      font-weight: 500;
+    }
+    form {
+      display: flex;
+      width: 65% !important;
+      margin: 0 auto;
+      justify-content: center;
+      input {
+        width: 75% !important;
+        outline: 0;
+        padding: 0.55em 1em;
+        border: none;
+        border-radius: 0;
+        border-top-left-radius: 7px;
+        border-bottom-left-radius: 7px;
+        transition: var(--transition);
+      }
+      button {
+        width: 25% !important;
+        padding: 0.55em 1em;
+        background: var(--main);
+        border-radius: 0;
+        border-top-right-radius: 7px;
+        border-bottom-right-radius: 7px;
+        transition: var(--transition);
+        &:hover {
+          background: var(--secondary);
+        }
+      }
+    }
   }
 }
