--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -104,6 +104,7 @@ header .inner .dropdown {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  position: relative;
 }
 
 header .inner .dropdown .avatar {
@@ -130,8 +131,52 @@ header .inner .dropdown .caret {
   transition: 0.5s ease-in-out !important;
 }
 
+header .inner .dropdown .logout {
+  opacity: 0;
+  position: absolute;
+  top: 50px;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  padding: 5em 1em;
+  border-radius: 7px;
+  -webkit-backdrop-filter: blur(3px);
+          backdrop-filter: blur(3px);
+  background: var(--blackGlass);
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-orient: vertical;
+  -webkit-box-direction: normal;
+      -ms-flex-direction: column;
+          flex-direction: column;
+  -webkit-box-pack: center;
+      -ms-flex-pack: center;
+          justify-content: center;
+  -webkit-box-align: center;
+      -ms-flex-align: center;
+          align-items: center;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+header .inner .dropdown .logout .logoutButton {
+  padding: 0.5em 2em;
+  background: var(--main);
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+header .inner .dropdown .logout .logoutButton:hover {
+  background: var(--secondary);
+}
+
 header .inner .dropdown:hover {
   cursor: pointer;
+}
+
+header .inner .dropdown:hover .logout {
+  opacity: 1;
 }
 
 header .inner .dropdown:hover .caret i {
