--- a/src/components/Header/styles/header.css
+++ b/src/components/Header/styles/header.css
@@ -138,7 +138,7 @@ header .inner .dropdown .logout {
   left: 0;
   width: 100%;
   height: 100%;
-  padding: 5em 1em;
+  padding: 4em 1em;
   border-radius: 7px;
   -webkit-backdrop-filter: blur(3px);
           backdrop-filter: blur(3px);
@@ -156,6 +156,12 @@ header .inner .dropdown .logout {
   -webkit-box-align: center;
       -ms-flex-align: center;
           align-items: center;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+header .inner .dropdown .logout p {
+  margin-top: 0;
   -webkit-transition: var(--transition);
   transition: var(--transition);
 }
