--- a/src/components/Header/styles/header.scss
+++ b/src/components/Header/styles/header.scss
@@ -86,7 +86,7 @@ header {
         left: 0;
         width: 100%;
         height: 100%;
-        padding: 5em 1em;
+        padding: 4em 1em;
         border-radius: 7px;
         backdrop-filter: blur(3px);
         background: var(--blackGlass);
@@ -95,6 +95,10 @@ header {
         justify-content: center;
         align-items: center;
         transition: var(--transition);
+        p {
+          margin-top: 0;
+          transition: var(--transition);
+        }
         .logoutButton {
           padding: 0.5em 2em;
           background: var(--main);
