--- a/src/components/Banner/styles/banner.css
+++ b/src/components/Banner/styles/banner.css
@@ -5,7 +5,7 @@
   display: -ms-flexbox;
   display: flex;
   width: 100%;
-  height: 500px;
+  height: 600px;
   -o-object-fit: contain;
      object-fit: contain;
   position: relative;
@@ -16,16 +16,8 @@
       -ms-flex-align: center;
           align-items: center;
   text-shadow: 0 1px 2px black;
-  -webkit-animation: backgroundMove 1s ease-in-out infinite alternate !important;
-          animation: backgroundMove 1s ease-in-out infinite alternate !important;
   -webkit-transition: var(--transition);
   transition: var(--transition);
-}
-
-@media (max-width: 1366px) {
-  .banner {
-    height: 600px;
-  }
 }
 
 .banner .innerBanner {
@@ -148,21 +140,48 @@
   background: var(--bg);
 }
 
+.animatedBanner {
+  -webkit-animation: backgroundMove 10s ease-in-out infinite alternate, fadeIn 1000ms ease-in-out !important;
+          animation: backgroundMove 10s ease-in-out infinite alternate, fadeIn 1000ms ease-in-out !important;
+}
+
+.scrolledBanner {
+  background-attachment: fixed;
+  background-position: 50% 15%;
+  background-size: cover;
+  position: relative;
+  -webkit-animation: fadeIn 1000ms ease-in-out !important;
+          animation: fadeIn 1000ms ease-in-out !important;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+.scrolledBanner::before {
+  content: "";
+  top: 0;
+  left: 0;
+  height: 100%;
+  width: 100%;
+  position: absolute;
+  background: -webkit-gradient(linear, left top, left bottom, color-stop(90%, rgba(0, 0, 0, 0.1)), color-stop(var(--blackGlass)), to(black));
+  background: linear-gradient(rgba(0, 0, 0, 0.1) 90%, var(--blackGlass), black);
+}
+
 @-webkit-keyframes backgroundMove {
   0% {
-    background-position: 45% center !important;
+    background-position: 50% 69%;
   }
   100% {
-    background-position: 75% center !important;
+    background-position: 50% 15%;
   }
 }
 
 @keyframes backgroundMove {
   0% {
-    background-position: 45% center !important;
+    background-position: 50% 69%;
   }
   100% {
-    background-position: 75% center !important;
+    background-position: 50% 15%;
   }
 }
 /*# sourceMappingURL=banner.css.map */
