--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -5,17 +5,13 @@
   font-family: "Montserrat" !important;
   display: flex;
   width: 100%;
-  height: 500px;
+  height: 600px;
   object-fit: contain;
   position: relative;
   justify-content: center;
   align-items: center;
   text-shadow: 0 1px 2px black;
-  animation: backgroundMove 1s ease-in-out infinite alternate !important;
   transition: var(--transition);
-  @media (max-width: 1366px) {
-    height: 600px;
-  }
   .innerBanner {
     display: flex;
     flex-direction: column;
@@ -90,11 +86,38 @@
   }
 }
 
+.animatedBanner {
+  animation: backgroundMove 10s ease-in-out infinite alternate,
+    fadeIn 1000ms ease-in-out !important;
+}
+
+.scrolledBanner {
+  background-attachment: fixed;
+  background-position: 50% 15%;
+  background-size: cover;
+  position: relative;
+  animation: fadeIn 1000ms ease-in-out !important;
+  transition: var(--transition);
+  &::before {
+    content: "";
+    top: 0;
+    left: 0;
+    height: 100%;
+    width: 100%;
+    position: absolute;
+    background: linear-gradient(
+      rgba(0, 0, 0, 0.1) 90%,
+      var(--blackGlass),
+      black
+    );
+  }
+}
+
 @keyframes backgroundMove {
   0% {
-    background-position: 45% center !important;
+    background-position: 50% 69%;
   }
   100% {
-    background-position: 75% center !important;
+    background-position: 50% 15%;
   }
 }
