--- a/src/components/Footer/styles/footer.css
+++ b/src/components/Footer/styles/footer.css
@@ -27,6 +27,10 @@
   z-index: 1;
   width: 100% !important;
   border-top: 2px solid var(--main);
+  -webkit-animation: fadeIn 1000ms ease-in-out;
+          animation: fadeIn 1000ms ease-in-out;
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
 }
 
 .footer .innerFooter {
