--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -11,6 +11,7 @@
   --secondary: #3c3c3c;
   --transition: 0.5s cubic-bezier(0.77, 0.2, 0.05, 1);
   --bg: #1f1f1f;
+  --mainGlass: rgba(255, 28, 11, 0.6);
   --blackGlass: rgba(0, 0, 0, 0.75);
   --authGlass: rgba(0, 0, 0, 0.05);
 }
@@ -38,6 +39,10 @@ body {
   min-height: 100vh;
   -webkit-animation: fadeIn 1000ms ease-in-out;
           animation: fadeIn 1000ms ease-in-out;
+}
+
+button {
+  padding: 0.375em 2em !important;
 }
 
 @-webkit-keyframes fadeIn {
