--- a/src/components/TopButton/styles/topButton.css
+++ b/src/components/TopButton/styles/topButton.css
@@ -15,15 +15,15 @@ body {
   right: 30px;
   z-index: 99;
   outline: none !important;
-  background: var(--main);
+  background: var(--mainGlass);
   border: none !important;
   color: var(--silver);
   cursor: pointer;
   padding: 10px 15px;
-  border-radius: 100px;
-  font-size: 18px;
+  border-radius: 7px;
+  font-size: 20px;
   font-family: "montserrat" !important;
-  font-weight: 500;
+  font-weight: 700;
   -webkit-transform: rotate(-90deg);
           transform: rotate(-90deg);
   -webkit-backdrop-filter: blur(2px);
@@ -63,12 +63,11 @@ body {
   position: absolute;
   width: 100%;
   height: 100%;
-  background: var(--secondary);
-  border-radius: 100px;
+  background: var(--authGlass);
+  border-radius: 7px;
   top: 0;
   left: 0;
   z-index: -1;
-  opacity: 0;
   -webkit-transform-origin: top;
           transform-origin: top;
   -webkit-transform: scale(1, 0);
