--- a/src/sass/App.css
+++ b/src/sass/App.css
@@ -41,10 +41,6 @@ body {
           animation: fadeIn 1000ms ease-in-out;
 }
 
-button {
-  padding: 0.375em 2em !important;
-}
-
 @-webkit-keyframes fadeIn {
   0% {
     opacity: 0;
@@ -69,6 +65,10 @@ main {
   min-height: 96vh;
   -webkit-animation: fadeIn 1000ms ease-in-out;
           animation: fadeIn 1000ms ease-in-out;
+}
+
+button:not(.iconButton) {
+  padding: 0.375em 2em !important;
 }
 
 div[role="presentation"] {
