--- a/src/components/Row/styles/row.css
+++ b/src/components/Row/styles/row.css
@@ -1,8 +1,23 @@
 .row {
-  background: black;
   color: white !important;
   font-family: montserrat;
   padding: 1em 1em 1em 8em;
+}
+
+.row .movieRow {
+  -webkit-transition: var(--transition);
+  transition: var(--transition);
+}
+
+@media (max-width: 992px) {
+  .row .movieRow {
+    -ms-flex-wrap: wrap;
+        flex-wrap: wrap;
+  }
+}
+
+.row:last-child {
+  margin-bottom: 3em;
 }
 
 .row h2 {
