--- a/src/components/Banner/styles/banner.scss
+++ b/src/components/Banner/styles/banner.scss
@@ -51,6 +51,9 @@
     h1 {
       font-weight: 700;
       width: 43%;
+      @media (max-width: 992px) {
+        width: 100%;
+      }
       letter-spacing: 1.8;
       font-size: 3em;
       margin-bottom: 0.2em;
@@ -58,6 +61,9 @@
     p {
       font-weight: 500;
       width: 43%;
+      @media (max-width: 992px) {
+        width: 100%;
+      }
     }
     .bannerButtons {
       display: flex;
