--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -42,6 +42,82 @@ body {
   animation: fadeIn 1000ms ease-in-out;
 }
 
+.content {
+  color: white;
+  font-family: "montserrat";
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  background-size: cover !important;
+  background-repeat: repeat-y !important;
+  background: linear-gradient(
+      to top,
+      rgba(0, 0, 0, 0.8) 0,
+      rgba(0, 0, 0, 0) 55%,
+      var(--authGlass) 5%,
+      rgba(0, 0, 0, 0.8) 100%
+    ),
+    url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg");
+  .inner {
+    width: 100%;
+    padding: 5em 0;
+    text-shadow: 0 1px 2px black;
+    @media (max-width: 992px) {
+      width: 99%;
+      .initial {
+        text-align: center !important;
+        h2 {
+          display: none;
+        }
+      }
+    }
+    .initial {
+      text-align: left;
+      padding: 1em 0em 1em 8em;
+    }
+    h1 {
+      font-size: 3em;
+    }
+    h2 {
+      font-weight: 500;
+    }
+    h3 {
+      font-weight: 500;
+    }
+    form {
+      display: flex;
+      width: 70% !important;
+      margin: 0 auto;
+      justify-content: center;
+      input {
+        width: 65% !important;
+        outline: 0;
+        padding: 0.55em 1em;
+        border: none;
+        border-radius: 0;
+        border-top-left-radius: 7px;
+        border-bottom-left-radius: 7px;
+        transition: var(--transition);
+      }
+      button {
+        width: 30% !important;
+        padding: 0.55em 1em;
+        background: var(--main);
+        border-radius: 0;
+        border-top-right-radius: 7px;
+        border-bottom-right-radius: 7px;
+        display: flex;
+        grid-gap: 0.5em;
+        transition: var(--transition);
+        &:hover {
+          background: var(--secondary);
+        }
+      }
+    }
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
