--- a/src/sass/App.scss
+++ b/src/sass/App.scss
@@ -49,20 +49,22 @@ body {
   flex-direction: column;
   justify-content: center;
   align-items: center;
-  background-size: cover !important;
-  background-repeat: repeat-y !important;
-  background: linear-gradient(
-      to top,
-      rgba(0, 0, 0, 0.8) 0,
-      rgba(0, 0, 0, 0) 55%,
-      var(--authGlass) 5%,
-      rgba(0, 0, 0, 0.8) 100%
-    ),
-    url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg");
+  transition: var(--transition);
   .inner {
     width: 100%;
     padding: 5em 0;
     text-shadow: 0 1px 2px black;
+    background-size: contain !important;
+    background-repeat: repeat-y !important;
+    background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.8) 0,
+        rgba(0, 0, 0, 0) 55%,
+        var(--authGlass) 5%,
+        rgba(0, 0, 0, 0.8) 100%
+      ),
+      url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg");
+    transition: var(--transition);
     @media (max-width: 992px) {
       width: 99%;
       .initial {
@@ -75,21 +77,26 @@ body {
     .initial {
       text-align: left;
       padding: 1em 0em 1em 8em;
+      transition: var(--transition);
     }
     h1 {
       font-size: 3em;
+      transition: var(--transition);
     }
     h2 {
       font-weight: 500;
+      transition: var(--transition);
     }
     h3 {
       font-weight: 500;
+      transition: var(--transition);
     }
     form {
       display: flex;
       width: 70% !important;
       margin: 0 auto;
       justify-content: center;
+      transition: var(--transition);
       input {
         width: 65% !important;
         outline: 0;
@@ -118,6 +125,21 @@ body {
   }
 }
 
+.multiple {
+  .inner {
+    background-size: contain !important;
+    background-repeat: repeat-y !important;
+    background: linear-gradient(
+        to top,
+        rgba(0, 0, 0, 0.55) 50% - 20,
+        rgba(0, 0, 0, 0) 0% + 20,
+        var(--authGlass) 0% + 20,
+        rgba(0, 0, 0, 0.55) 50% - 20
+      ),
+      url("https://assets.nflxext.com/ffe/siteui/vlv3/757ab38f-5d08-40bc-b3eb-eaba63ed8203/93c34f94-56c8-40a7-8b2e-b4aac6427977/GB-en-20210125-popsignuptwoweeks-perspective_alpha_website_medium.jpg") !important;
+  }
+}
+
 @keyframes fadeIn {
   0% {
     opacity: 0;
@@ -135,7 +157,9 @@ main {
 }
 
 button {
+  transition: var(--transition);
   &:not(.iconButton) {
+    transition: var(--transition);
     padding: 0.375em 2em !important;
   }
 }
@@ -148,10 +172,12 @@ div[role="presentation"] {
   font-family: "Montserrat";
   font-size: 2em !important;
   color: white;
+  transition: var(--transition);
   button {
     font-family: "Montserrat";
     font-size: 2em !important;
     color: white;
+    transition: var(--transition);
   }
 }
 
@@ -176,6 +202,7 @@ div[role="presentation"] {
     transition: var(--transition);
   }
   &:hover {
+    transition: var(--transition);
     &::before {
       transform: scale(1, 1);
       transition: 500ms ease-in-out;
@@ -187,6 +214,7 @@ div[role="presentation"] {
   display: none;
   height: 10px;
   background: rgb(31, 31, 31);
+  transition: var(--transition);
 }
 
 ::-webkit-scrollbar-thumb {
